<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/total_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.converter.ConverterActivity">

        <TextView
            android:id="@+id/First_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/First_Text"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/central_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/Text_insert_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/Value"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currencie_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            app:helperText="@string/obligatorio"
            app:startIconDrawable="?android:attr/actionModeFindDrawable">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/currencie_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/value_to_convert"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_from_currencie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/From_currencie"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/select_from_currencie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description_1"
                android:padding="15dp"
                android:verticalScrollbarPosition="defaultPosition" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_to_currencie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/to_currencie_new"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/select_to_currencie"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:contentDescription="@string/content_description_2"
                android:padding="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculate_button"
                android:layout_width="290dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:text="@string/calculate"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button_change"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/empty"
                app:icon="@android:drawable/stat_notify_sync"
                app:iconSize="40dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:padding="30dp"
            android:text="@string/result_base"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>
